--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -14,7 +14,7 @@ resources.frontController.defaultModule = "default"
 resources.modules[] = 
 
 resources.layout.layoutPath = TEMPLATE_PATH "/default"
-resources.layout.layout = "index"
+resources.layout.layout = "layout"
 
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "localhost"
