--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,16 +11,16 @@ autoloaderNamespaces[] = "MyZend_"
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.defaultModule = "default"
-resources.modules[] = 
+resources.modules[] =
 
 resources.layout.layoutPath = TEMPLATE_PATH "/default"
-resources.layout.layout = "layout"
+resources.layout.layout = "sub_layout"
 
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
-resources.db.params.password = 
-resources.db.params.dbname = 
+resources.db.params.password =
+resources.db.params.dbname =
 
 [developer : production]
 phpSettings.display_status_errors = 1
