update Product List

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -19,8 +19,8 @@ resources.layout.layout = "sub_layout"
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
-resources.db.params.password =
-resources.db.params.dbname =
+resources.db.params.password = "root"
+resources.db.params.dbname = "match"
 
 [developer : production]
 phpSettings.display_status_errors = 1
