--- a/public/templates/default/template.ini
+++ b/public/templates/default/template.ini
@@ -1,29 +1,27 @@
-[homepage]
+[blank]
 
 url = "/public/templates/default"
-
-layout = "homepage_layout"
-
+layout = "blank_layout"
 title = "Match"
 
 cssDir = "/css"
-cssFile[] = "/layout.css"
 cssFile[] = "/custom.css"
-
 cssLink[] = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 
 jsDir = "/js"
 jsFile[] = "/custom.js"
-
 jsLink[] = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js";
 jsLink[] = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 
 imagesDir = "/images"
 
+[homepage : blank]
+
+layout = "homepage_layout"
+
+cssFile[] = "/layout.css"
+cssFile[] = "/custom.css"
+
 [sub : homepage]
 
 layout = "sub_layout"
-
-[blank : homepage]
-
-layout = "blank_layout"
