update log in, log out, my page, crate account

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -21,6 +21,7 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.dbname = "match"
+resources.db.params.charset = "utf8"
 
 [developer : production]
 phpSettings.display_status_errors = 1
