--- a/public/templates/admin/template.ini
+++ b/public/templates/admin/template.ini
@@ -1,16 +1,18 @@
 [blank]
 
-url = "/public/templates/default"
+url = "/public/templates/admin"
 layout = "layout"
 title = "Match"
 
 cssDir = "/css"
-cssFile[] = "/custom.css"
 cssLink[] = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+cssFile[] = "/layout.css"
+cssFile[] = "/custom.css"
 
 jsDir = "/js"
 jsFile[] = "/custom.js"
 jsLink[] = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js";
 jsLink[] = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+jsLink[] = "//cdn.ckeditor.com/4.7.2/basic/ckeditor.js"
 
 imagesDir = "/images"
